crates/hird-check/tests/snapshots/modules__opaque_destructure_outside_module_errors.snap
---
source: crates/hird-check/tests/modules.rs
expression: "check_modules(&[(\"Ets\", \"module Ets\\npub opaque type Table = MkTable(Int)\"),\n(\"App\",\n\"module App\\nuse Ets.{Table}\\npub fn peek(t: Table) -> Int = match t { MkTable(n) -> n, }\",),])"
---
== App ==
peek : Table → Int
error[C0021] 67..78: cannot destructure opaque type `Table` outside module `Ets`
== Ets ==
MkTable : Int → Table
